New GUI for launch and updated Gradle